Refs #3733 Installer was broken because there is not yet a token_auth during installer, disabling csrf protectionif piwik is not installed

--- a/plugins/Installation/templates/install.css
+++ b/plugins/Installation/templates/install.css
@@ -48,6 +48,9 @@ h3 {
 	line-height:1.33;
 }
 
+#topRightBar {
+    float:right;top:-60px; right:10px;position:relative;
+}
 .error {
 	color:red;
 	font-size:100%;
